[gd_scene load_steps=11 format=3 uid="uid://b8gke62ydhsvf"]

[ext_resource type="Script" uid="uid://dc4g2svntt4da" path="res://boss.gd" id="1_s2rfe"]
[ext_resource type="PackedScene" uid="uid://bqo8gq2r5spg2" path="res://prefabs/missile.tscn" id="2_ktg0e"]
[ext_resource type="Script" uid="uid://cjy00slrdvflx" path="res://prefabs/boss_hit_box.gd" id="3_cfepy"]
[ext_resource type="Texture2D" uid="uid://dgfev8jlmb0gf" path="res://garbage can/SusBoi/SusBoi Boss.png" id="3_jvehu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ktg0e"]
radius = 68.0661

[sub_resource type="AtlasTexture" id="AtlasTexture_cfepy"]
atlas = ExtResource("3_jvehu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyv5m"]
atlas = ExtResource("3_jvehu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfjcr"]
atlas = ExtResource("3_jvehu")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn4fh"]
atlas = ExtResource("3_jvehu")
region = Rect2(128, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6yclo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfepy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyv5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfjcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn4fh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Boss" type="Node2D"]
script = ExtResource("1_s2rfe")
missileScene = ExtResource("2_ktg0e")

[node name="BossHitBox" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_cfepy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossHitBox"]
shape = SubResource("CircleShape2D_ktg0e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BossHitBox"]
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_6yclo")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="IndividualMissileTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="MissileTimer" to="." method="_on_missile_timer_timeout"]
[connection signal="timeout" from="IndividualMissileTimer" to="." method="_on_individual_missile_timer_timeout"]
